--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 /** MAIN */
-/** header */
+/** header navigation */
 .logo_navigation {
   padding-top: 50px;
 }
@@ -56,6 +56,7 @@ body {
   color: white;
 }
 
+/** splash */
 .splash {
   position: relative;
   height: 900px;
@@ -93,5 +94,50 @@ body {
   text-transform: uppercase;
   color: white;
   background: #fed136;
+}
+
+/** services */
+.services {
+  text-align: center;
+  margin-bottom: 120px;
+}
+
+.services .section_title h2 {
+  margin-top: 120px;
+  font-size: 40px;
+  font-family: "Montserrat";
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  color: #0e0e0e;
+}
+
+.services .section_title p {
+  margin-bottom: 120px;
+  text-align: center;
+  font-weight: 100;
+  font-family: "Roboto Slab";
+  font-style: italic;
+}
+
+.services .services_box {
+  font-family: "Montserrat";
+}
+
+.services .services_box h3 {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.services .services_box p {
+  font-size: 14px;
+  font-weight: 200;
+  text-align: justify;
+}
+
+.services .services_box i {
+  font-size: 50px;
+  padding-bottom: 15px;
+  color: #fed136;
 }
 /*# sourceMappingURL=style.css.map */
